--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <script type="text/javascript">
       $(function() {
-        var endDate = "April 2, 2016 00:00:00";
+        var endDate = "April 1, 2016 00:00:00";
 
         $('.countdown.simple').countdown({ date: endDate });
 
@@ -76,7 +76,7 @@
       <div class="countdown styled"></div>
     </div>
 
-  	<div id="crown"></div>
+  	<!-- <div id="crown"></div> -->
 
 <script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js'></script>
 
